💄 Add or update the UI and style files

--- a/src/styles/common/variables.scss
+++ b/src/styles/common/variables.scss
@@ -1,7 +1,5 @@
-// FONT-FAMILY
-$tipographyOswald: var(--tipographyOswald);
+$tipography-content: var(--tipographyTeko);
 
-// FONT-SIZE
 $text-5xl: 3rem;
 $line-height-5xl: 1;
 
