--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,8 +1,31 @@
+@import "../styles/common/variables.scss";
+
 .footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  height: 10vh;
-  padding: 16px 0;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: flex-end;
+	height: 10vh;
+	padding: 16px 0;
+}
+
+.footer span {
+	font-size: $text-sm;
+	font-family: $tipography-content;
+	font-weight: 400;
+	line-height: $line-height-sm;
+}
+
+@media (min-width: 768px) {
+	.footer span {
+		font-size: $text-md;
+		line-height: $line-height-md;
+	}
+}
+
+@media (min-width: 1024px) {
+	.footer span {
+		font-size: $text-lg;
+		line-height: $line-height-lg;
+	}
 }
