--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,24 +1,25 @@
 @import "../styles/common/variables.scss";
 
 .large-container {
+	display: flex;
+	flex-direction: column;
 	background: url("../assets/bg-mandalorian.webp");
 	background-size: cover;
-	position: relative;
-	z-index: -1;
-
 	width: 100vw;
 	height: 100vh;
+	position: relative;
+	z-index: 1;
 }
 
-.large-container::after {
+.large-container::before {
 	content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.2);
-  z-index: -1;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.3);
+	z-index: -1;
 }
 
 .large-container header,
@@ -29,6 +30,10 @@
 	margin: 0 auto;
 }
 
+.large-container main {
+	flex: 1;
+}
+
 .button {
 	display: inline-flex;
 	flex-direction: row;
@@ -37,7 +42,7 @@
 	flex: 1;
 
 	font-size: $text-xl;
-	font-family: $tipographyOswald;
+	font-family: $tipography-content;
 	font-weight: 600;
 	line-height: $line-height-lg;
 	text-transform: uppercase;
@@ -47,35 +52,37 @@
 	cursor: pointer;
 }
 
+.button a {
+	text-decoration: none;
+	color: white;
+}
+
 .button--icon {
 	flex: none;
 	border-radius: 50%;
 	background: transparent;
 }
 
-.button--with-border {
+.button.border {
 	background: transparent;
-	border-image: linear-gradient(
-		-45deg,
-		rgba(222, 148, 96, 1) 0%,
-		rgba(246, 212, 125, 1) 100%
-	);
+	border-image: linear-gradient(150deg, $secondary-color, $primary-color);
 	border-image-slice: 1;
 	border-style: solid;
 	border-width: 3px;
+	padding: 8px 8px 2px;
 }
 
-.button--with-border-left {
+.button.border--left {
 	position: relative;
 	background-color: transparent;
 }
 
-.button--with-border-left::before {
+.button.border--left::before {
 	content: "";
 	position: absolute;
 	top: 0;
 	left: -3px;
 	bottom: 0;
 	width: 3px;
-	background: linear-gradient(45deg, $primary-color, $secondary-color);
+	background: linear-gradient(150deg, $secondary-color, $primary-color);
 }
