--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -3,6 +3,7 @@
 @import "../styles/header.scss";
 @import "../styles/main.scss";
 @import "../styles/footer.scss";
+@import "../styles/error.scss";
 
 .large-container {
 	display: flex;
